--- a/src/main/resources/regression/msmarco-passage-docTTTTTquery.yaml
+++ b/src/main/resources/regression/msmarco-passage-docTTTTTquery.yaml
@@ -90,16 +90,16 @@ models:
         - 0.9467
   - name: bm25-default+rocchio-neg
     display: +Rocchio*
-    params: -bm25 -rocchio -rocchio.useNegative
+    params: -bm25 -rocchio -rocchio.useNegative -rerankCutoff 1000
     results:
       AP@1000:
-        - 0.2255
+        - 0.2234
       RR@10:
-        - 0.2155
+        - 0.2129
       R@100:
-        - 0.8054
+        - 0.8023
       R@1000:
-        - 0.9474
+        - 0.9475
   - name: bm25-tuned
     display: BM25 (tuned)
     params: -bm25 -bm25.k1 0.82 -bm25.b 0.68
@@ -138,16 +138,16 @@ models:
         - 0.9496
   - name: bm25-tuned+rocchio-neg
     display: +Rocchio*
-    params: -bm25 -bm25.k1 0.82 -bm25.b 0.68 -rocchio -rocchio.useNegative
+    params: -bm25 -bm25.k1 0.82 -bm25.b 0.68 -rocchio -rocchio.useNegative -rerankCutoff 1000
     results:
       AP@1000:
-        - 0.2280
+        - 0.2276
       RR@10:
-        - 0.2176
+        - 0.2173
       R@100:
-        - 0.8079
+        - 0.8071
       R@1000:
-        - 0.9497
+        - 0.9493
   - name: bm25-tuned2
     display: BM25 (tuned2)
     params: -bm25 -bm25.k1 2.18 -bm25.b 0.86
@@ -186,13 +186,13 @@ models:
         - 0.9535
   - name: bm25-tuned2+rocchio-neg
     display: +Rocchio*
-    params: -bm25 -bm25.k1 2.18 -bm25.b 0.86 -rocchio -rocchio.useNegative
+    params: -bm25 -bm25.k1 2.18 -bm25.b 0.86 -rocchio -rocchio.useNegative -rerankCutoff 1000
     results:
       AP@1000:
-        - 0.2492
+        - 0.2467
       RR@10:
-        - 0.2400
+        - 0.2373
       R@100:
-        - 0.8265
+        - 0.8227
       R@1000:
-        - 0.9534
+        - 0.9539
