--- a/src/main/resources/regression/dl19-doc.yaml
+++ b/src/main/resources/regression/dl19-doc.yaml
@@ -196,3 +196,75 @@ models:
         - 0.4295
       R@1000:
         - 0.7559
+  - name: bm25-tuned2
+    display: BM25 (tuned2)
+    params: -bm25 -bm25.k1 4.46 -bm25.b 0.82
+    results:
+      AP@100:
+        - 0.2336
+      nDCG@10:
+        - 0.5233
+      R@100:
+        - 0.3849
+      R@1000:
+        - 0.6757
+  - name: bm25-tuned2+rm3
+    display: +RM3
+    params: -bm25 -bm25.k1 4.46 -bm25.b 0.82 -rm3
+    results:
+      AP@100:
+        - 0.2643
+      nDCG@10:
+        - 0.5526
+      R@100:
+        - 0.4131
+      R@1000:
+        - 0.7189
+  - name: bm25-tuned2+rocchio
+    display: +Rocchio
+    params: -bm25 -bm25.k1 4.46 -bm25.b 0.82 -rocchio
+    results:
+      AP@100:
+        - 0.2657
+      nDCG@10:
+        - 0.5584
+      R@100:
+        - 0.4164
+      R@1000:
+        - 0.7299
+  - name: bm25-tuned2+rocchio-neg
+    display: +Rocchio*
+    params: -bm25 -bm25.k1 4.46 -bm25.b 0.82 -rocchio -rocchio.useNegative -rerankCutoff 1000
+    results:
+      AP@100:
+        - 0.2670
+      nDCG@10:
+        - 0.5567
+      R@100:
+        - 0.4172
+      R@1000:
+        - 0.7312
+  - name: bm25-tuned2+ax
+    display: +Ax
+    params: -bm25 -bm25.k1 4.46 -bm25.b 0.82 -axiom -axiom.deterministic -rerankCutoff 20
+    results:
+      AP@100:
+        - 0.2724
+      nDCG@10:
+        - 0.5093
+      R@100:
+        - 0.4332
+      R@1000:
+        - 0.7474
+  - name: bm25-tuned2+prf
+    display: +PRF
+    params: -bm25 -bm25.k1 4.46 -bm25.b 0.82 -bm25prf
+    results:
+      AP@100:
+        - 0.2815
+      nDCG@10:
+        - 0.5360
+      R@100:
+        - 0.4310
+      R@1000:
+        - 0.7577
