--- a/src/main/resources/regression/msmarco-doc.yaml
+++ b/src/main/resources/regression/msmarco-doc.yaml
@@ -100,6 +100,30 @@ models:
         - 0.6792
       R@1000:
         - 0.8808
+  - name: bm25-default+ax
+    display: +Ax
+    params: -bm25 -axiom -axiom.deterministic -rerankCutoff 20
+    results:
+      AP@1000:
+        - 0.1146
+      RR@100:
+        - 0.1135
+      R@100:
+        - 0.5754
+      R@1000:
+        - 0.8373
+  - name: bm25-default+prf
+    display: +PRF
+    params: -bm25 -bm25prf
+    results:
+      AP@1000:
+        - 0.1357
+      RR@100:
+        - 0.1347
+      R@100:
+        - 0.6374
+      R@1000:
+        - 0.8471
   - name: bm25-tuned
     display: BM25 (tuned)
     params: -bm25 -bm25.k1 3.44 -bm25.b 0.87
@@ -148,6 +172,30 @@ models:
         - 0.7922
       R@1000:
         - 0.9326
+  - name: bm25-tuned+ax
+    display: +Ax
+    params: -bm25 -bm25.k1 3.44 -bm25.b 0.87 -axiom -axiom.deterministic -rerankCutoff 20
+    results:
+      AP@1000:
+        - 0.1888
+      RR@100:
+        - 0.1880
+      R@100:
+        - 0.7560
+      R@1000:
+        - 0.9268
+  - name: bm25-tuned+prf
+    display: +PRF
+    params: -bm25 -bm25.k1 3.44 -bm25.b 0.87 -bm25prf
+    results:
+      AP@1000:
+        - 0.1559
+      RR@100:
+        - 0.1550
+      R@100:
+        - 0.6852
+      R@1000:
+        - 0.8760
   - name: bm25-tuned2
     display: BM25 (tuned2)
     params: -bm25 -bm25.k1 4.46 -bm25.b 0.82
@@ -196,3 +244,27 @@ models:
         - 0.7863
       R@1000:
         - 0.9316
+  - name: bm25-tuned2+ax
+    display: +Ax
+    params: -bm25 -bm25.k1 4.46 -bm25.b 0.82 -axiom -axiom.deterministic -rerankCutoff 20
+    results:
+      AP@1000:
+        - 0.1886
+      RR@100:
+        - 0.1878
+      R@100:
+        - 0.7526
+      R@1000:
+        - 0.9249
+  - name: bm25-tuned2+prf
+    display: +PRF
+    params: -bm25 -bm25.k1 4.46 -bm25.b 0.82 -bm25prf
+    results:
+      AP@1000:
+        - 0.1530
+      RR@100:
+        - 0.1521
+      R@100:
+        - 0.6825
+      R@1000:
+        - 0.8766
