--- a/src/main/resources/docgen/templates/msmarco-doc-segmented-docTTTTTquery.template
+++ b/src/main/resources/docgen/templates/msmarco-doc-segmented-docTTTTTquery.template
@@ -63,7 +63,7 @@ ${effectiveness}
 Explanation of settings:
 
 + The setting "default" refers the default BM25 settings of `k1=0.9`, `b=0.4`.
-+ The setting "tuned" refers to `k1=2.56`, `b=0.59`, tuned using the MS MARCO document sparse judgments to optimize for recall@100 (i.e., for first-stage retrieval) on 2020/12.
++ The setting "tuned" refers to `k1=2.56`, `b=0.59`, tuned in 2020/12 using the MS MARCO document sparse judgments to optimize for recall@100 (i.e., for first-stage retrieval).
 
 In these runs, we are retrieving the top 1000 hits for each query and using `trec_eval` to evaluate all 1000 hits.
 Since we're in the passage condition, we fetch the 10000 passages and select the top 1000 documents using MaxP.
