--- a/src/main/resources/regression/msmarco-passage-hgf-wp.yaml
+++ b/src/main/resources/regression/msmarco-passage-hgf-wp.yaml
@@ -2,11 +2,11 @@
 corpus: msmarco-wp
 corpus_path: collections/msmarco/passage
 
-index_path: indexes/lucene-index.msmarco-passage-wp/
+index_path: indexes/lucene-index.msmarco-passage-hgf-wp/
 collection_class: JsonCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 9
-index_options: -storePositions -storeDocvectors -storeRaw -analyzeWithHuggingFaceTokenizer  bert-base-uncased
+index_options: -storePositions -storeDocvectors -storeRaw -analyzeWithHuggingFaceTokenizer bert-base-uncased
 index_stats:
   documents: 8841823
   documents (non-empty): 8841823
